WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240896
[Angle] Uniform buffer reuse causes flush, creates invalid state
https://bugs.webkit.org/show_bug.cgi?id=240896
Summary
[Angle] Uniform buffer reuse causes flush, creates invalid state
Kyle Piddington
Reported
2022-05-24 18:44:53 PDT
[Angle] Uniform buffer reuse causes flush, creates invalid state
Attachments
Patch
(1.91 KB, patch)
2022-05-24 18:46 PDT
,
Kyle Piddington
no flags
Details
Formatted Diff
Diff
For landing
(3.05 KB, patch)
2022-05-26 04:15 PDT
,
Kimmo Kinnunen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kyle Piddington
Comment 1
2022-05-24 18:46:27 PDT
Created
attachment 459740
[details]
Patch
EWS Watchlist
Comment 2
2022-05-24 18:48:27 PDT
Note that there are important steps to take when updating ANGLE. See
https://trac.webkit.org/wiki/UpdatingANGLE
Kimmo Kinnunen
Comment 3
2022-05-25 03:06:32 PDT
Comment on
attachment 459740
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=459740&action=review
> Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ContextMtl.mm:2224 > {
this would need some context in the commit message. If you've not updated your checkout, maybe you need to do pull. The commit messages come now from the commit message instead of ChangeLog files.
Kimmo Kinnunen
Comment 4
2022-05-25 03:07:09 PDT
Do we have any idea in which specific case this happens? In other words, can we write a test for it?
Myles C. Maxfield
Comment 5
2022-05-25 15:40:49 PDT
Comment on
attachment 459740
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=459740&action=review
> Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ContextMtl.mm:2232 > + ASSERT(mRenderEncoder.valid());
Is this really right? ASSERT()s are supposed to only be for things that are provably true.
Kimmo Kinnunen
Comment 6
2022-05-26 04:15:11 PDT
Created
attachment 459782
[details]
For landing
Kimmo Kinnunen
Comment 7
2022-05-26 04:19:18 PDT
At the time, happened on earth.google.com. Most likely started happening once we increased the max uniforms? Could be tested in WebGL test suite,
bug 240948
.
EWS
Comment 8
2022-05-26 07:00:43 PDT
Committed
r294877
(
251007@main
): <
https://commits.webkit.org/251007@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459782
[details]
.
Radar WebKit Bug Importer
Comment 9
2022-05-26 07:01:14 PDT
<
rdar://problem/93967506
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug